infra/overlays/ral-stage/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
  - host: "grafana.130-246-80-45.sslip.io"
